--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
   },
   "dependencies": {
     "date-fns": "^4.0.0",
-    "moment-timezone": "^0.5.45",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
+    "mongoose": "^8.7.1",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "stripe": "^17.2.0"
   },
   "devDependencies": {
-    "daisyui": "^4.12.10",
+    "daisyui": "^4.12.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
+    "fluid-tailwind": "^1.0.3",
     "postcss": "^8",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.1"
   }
 }
