--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "date-fns": "^4.0.0",
+    "googleapis": "^144.0.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "mongoose": "^8.7.1",
-    "next": "14.2.11",
+    "next": "^14.2.20",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
