--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.9.6",
     "date-fns": "^4.0.0",
     "googleapis": "^144.0.0",
     "moment": "^2.30.1",
@@ -21,6 +22,7 @@
     "stripe": "^17.2.0"
   },
   "devDependencies": {
+    "@types/react": "19.0.3",
     "daisyui": "^4.12.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
