--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-qr-code": "^2.0.15",
     "stripe": "^17.2.0"
   },
   "devDependencies": {
