--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.9.6",
     "date-fns": "^4.0.0",
+    "framer-motion": "^12.6.2",
     "googleapis": "^144.0.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
