--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.0.0",
     "framer-motion": "^12.6.2",
     "googleapis": "^144.0.0",
+    "keen-slider": "^6.8.6",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "mongoose": "^8.7.1",
@@ -21,7 +24,8 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-qr-code": "^2.0.15",
-    "stripe": "^17.2.0"
+    "stripe": "^17.2.0",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@types/react": "19.0.3",
