--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "skultes-next",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
@@ -17,7 +18,9 @@
     "date-fns": "^4.0.0",
     "framer-motion": "^12.6.2",
     "googleapis": "^144.0.0",
+    "joi": "^17.13.3",
     "keen-slider": "^6.8.6",
+    "libphonenumber-js": "^1.12.9",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "mongoose": "^8.7.1",
